Fix horizontal shift problem

--- a/app/static/css/course.css
+++ b/app/static/css/course.css
@@ -29,6 +29,8 @@ html {
     min-width: 320px;
     min-height: 100%;
     background: var(--page);
+    overflow-y: scroll;
+    scrollbar-gutter: stable;
 }
 
 body {
